testcrate/tests/ui/aggregate.stderr
error[E0609]: no field `test` on type `Table`
  --> $DIR/aggregate.rs:49:23
   |
49 |     sql!(Table.values(test).aggregate(avg(i32_field)));
   |                       ^^^^ unknown field
   |
   = note: available fields are: `id`, `field1`, `i32_field`

error: aborting due to previous error

